kubernetes/staging/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stonehaven-staging
  name: dashboard
  labels:
    environment: staging
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      name: dashboard
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/grayr0ot/sh-dashboard:dev
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
