kubernetes/staging/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stonehaven-staging
  name: dashboard
  labels:
    environment: staging
    app: dashboard

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
