kubernetes/staging/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: stonehaven-staging
  name: dashboard
  labels:
    environment: staging
    app: dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: dashboard-staging.stonehaven.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
